--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             <li><a href="#horizontalPageBreak">Horizontal Page Break</a></li>
             <li><a href="#horizontalPageBreakRepeat">Horizontal Page Break Repeat</a></li>
             <li><a href="#horizontalPageBreakBehaviour">Horizontal Page Break Behaviour</a></li>
+            <li><a href="#complexData">Rowspan and colspan complex</a></li>
+            <li><a href="#breakRowData">Rowspan break first row</a></li>
+            
         </ul>
 
         <button id="download-btn" class="pure-button">Download PDF</button>
@@ -204,6 +207,7 @@
 <script src="examples/libs/faker.min.js"></script>
 <script src="dist/jspdf.plugin.autotable.js"></script>
 
+<script src="examples/libs/fontTimeNewRoman.js"></script>
 <script src="examples/examples.js"></script>
 
 <!-- Some scripts to make the examples work nicely -->
